@@ -24,6 +24,23 @@ class VirtualEnv(Component):
     def verify(self):
         self.assert_file_is_current(self.python)
 
+    def _detect_virtualenv(self):
+        # Prefer the virtualenv of the target version. There are some
+        # incompatibilities between Python and virtualenv versions.
+        possible_executables = ['virtualenv-{}'.format(self.version),
+                                'virtualenv']
+        for executable in possible_executables:
+            try:
+                self.cmd('type {}'.format(executable))
+            except RuntimeError:
+                pass
+            else:
+                break
+        else:
+            raise RuntimeError('Could not find virtualenv executable')
+        return executable
+
     def update(self):
-        self.cmd('virtualenv --no-site-packages --python python{} .'.format(
-                 self.version))
+        executable = self._detect_virtualenv()
+        self.cmd('{} --no-site-packages --python python{} .'.format(
+                 executable, self.version))
