@@ -5,6 +5,9 @@ Changelog
 0.2 (unreleased)
 ================
 
+- Use python version specific virtualenv, if availble. This helps with ancient
+  Python 2.4 components.
+
 - Internalize download hash handling using hashlib. Allow selection of hash
   function. (Thanks to Christine Koppelt.)
 
